--- a/.github/workflows/test-on-pr.yml
+++ b/.github/workflows/test-on-pr.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           aws-access-key-id: AKIAWZQD3P3YOM2CN2EO
           aws-secret-access-key: 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
-          aws-region: us-east-1
+          aws-region: eu-west-1
       - name: Run CodeBuild
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
